--- a/oehealth_idn/report/registration_reciept.xml
+++ b/oehealth_idn/report/registration_reciept.xml
@@ -8,13 +8,47 @@
                         <div class="page">
                             <div class="oe_structure"/>
                             <div class="row">
+                                <div class="col-xs-3">
+                                    <img t-if="res_company.logo" style="width:80px;height:80px;" t-att-src="'data:image/png;base64,%s' %res_company.logo"/>
+                                </div>
+                                <div class="col-xs-9">
+                                    <div class="row text-center">
+                                        <span>KLINIK PRATAMA MEDIKA</span>
+                                    </div>
+                                    <div class="row text-center">
+                                        <span>YAKESPEN UTAMA</span>
+                                    </div>
+                                    <div class="row text-center">
+                                        <span>Jl Hang Jebat Barek Motor Kijang</span>
+                                    </div>
+                                    <div class="row text-center">
+                                        <span>Kec Bintan Timur</span>
+                                    </div>
+                                    <div class="row text-center">
+                                        <span>HP: 082182441550</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <hr/>
+                            <div class="row">
                                 <div class="col-xs-12">
                                     <div class="row text-center">
-                                        <img t-if="res_company.logo" style="width:150px;height:150px;" t-att-src="'data:image/png;base64,%s' %res_company.logo"/>
+                                        <span t-esc="datetime.datetime.now().strftime('%A, %d %B %Y, %H:%M:%S')"/>
+                                    </div>
+                                    <div class="row text-center">
+                                        <span>Nomor Panggil Pemeriksaan</span>
                                     </div>
                                     <div class="row text-center">
                                         <div class="col-xs-12">
                                             <span style="font-size:56px;" t-field="o.queue_trans_id"/>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-xs-6">
+                                            <span>No RM #</span>
+                                        </div>
+                                        <div class="col-xs-6">
+                                            <span t-field="o.patient.medical_record"/>
                                         </div>
                                     </div>
                                     <div class="row">
@@ -30,7 +64,7 @@
                                             <span>NIK</span>
                                         </div>
                                         <div class="col-xs-6">
-                                            
+                                            <span t-field="o.patient.identity"/>
                                         </div>
                                     </div>
                                     <div class="row">
@@ -72,6 +106,7 @@
                                             </t>
                                         </div>
                                     </div>
+                                    <br/>
                                     <div class="row text-center" styles="margin-top:30px;">
                                         <img t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('Code128', o.name, 600, 100)" style="width:300px;height:50px"/>                                    
                                     </div>
