--- a/oehealth_idn/views/prescription_view.xml
+++ b/oehealth_idn/views/prescription_view.xml
@@ -8,6 +8,7 @@
         <field name="type">form</field>
         <field name="inherit_id" ref="oehealth.oeh_medical_prescription_view"/>
         <field name="arch" type="xml">
+            
             <xpath expr="//button[@name='action_prescription_invoice_create']" position="attributes">
                 <attribute name="invisible">1</attribute>
             </xpath>
@@ -19,12 +20,14 @@
             </xpath>
             
             <xpath expr="//notebook/page[1]/field[@name='prescription_line']/tree[1]/field[@name='name']" position="after">
-                <field name="qty_available"/>
+                <field name="qty_available" readonly="1"/>
             </xpath>
+
             <xpath expr="//notebook/page[1]/field[@name='prescription_line']/form[1]/group[1]/group[1]/field[@name='name']" position="after">
                 <field name="product_template_categ_id" readonly="1"/>
-                <field name="qty_available"/>
+                <field name="qty_available" readonly="1"/>
             </xpath>
+
             <xpath expr="//notebook/page[1]" position="after">
                 <page string="Concoctions">
                     <field name="concoction_ids" context="{'default_doctor_id': doctor}">
@@ -54,11 +57,15 @@
                                     <label for="qty" string="Quantity"/>
                                     <div>
                                         <field name="qty" class="oe_inline" required="1" style="width:25% !important"/>
+                                        <!--
                                         <field name="qty_unit" class="oe_inline" style="width:18% !important"/>
                                         <field name="product_uom" class="oe_inline" style="width:47% !important"/>
+                                        -->
                                     </div>
                                 </group>
-                                <group/>
+                                <group>
+                                    <field name="remark"/>
+                                </group>
                             </group>
                             <notebook>
                                 <page string="Ingredients">
@@ -126,6 +133,7 @@
     </record>
 
     <!-- Health Center Pharmacy Line -->
+
     <record model="ir.ui.view" id="oeh_medical_healthcenters_pharmacy_line_tree_view">
         <field name="name">oeh_medical_healthcenters_pharmacy_line_tree_view</field>
         <field name="model">oeh.medical.health.center.pharmacy.line</field>
@@ -162,6 +170,7 @@
                         <group>
                             <field name="name" on_change="onchange_prescription_id(name)" attrs="{'required': [('is_public','=', False)],'readonly': [('is_public','=', True)]}" options="{'no_create': True}"/>
                             <field name="doctor" options="{'no_create': True}"/>
+                            <field name="pharmacist"/>
                             <field name="unit_id" readonly="1"/>
                             <!-- <field name="reg_id" readonly="1"/> -->
                             <field name="reg_ids" readonly="1"/>
@@ -223,9 +232,11 @@
                                                 <field name="doctor_id" required="1"/>
                                                 <label for="qty" string="Quantity"/>
                                                 <div>
-                                                    <field name="qty" class="oe_inline" required="1" style="width:25% !important"/> for
+                                                    <field name="qty" class="oe_inline" required="1" style="width:25% !important"/>
+                                                    <!--
                                                     <field name="qty_unit" class="oe_inline" style="width:18% !important"/>
                                                     <field name="product_uom" class="oe_inline" style="width:47% !important"/>
+                                                    -->
                                                 </div>
                                             </group>
                                             <group>
@@ -243,9 +254,9 @@
                                                         <field name="uom_po_id" readonly="1"/>
                                                         -->
                                                         <field name="is_alt_uom"/>
-                                                        <field name="qty" attrs="{'readonly':[('is_alt_uom','=',True)], 'required': [('is_alt_uom','=',False)]}"/>
+                                                        <field name="qty" attrs="{'invisible':[('is_alt_uom','=',True)],'readonly':[('is_alt_uom','=',True)], 'required': [('is_alt_uom','=',False)]}"/>
                                                         <field name="uom_id" readonly="1"/>
-                                                        <field name="zat_qty" attrs="{'readonly':[('is_alt_uom','=',False)], 'required': [('is_alt_uom','=',True)]}"/>
+                                                        <field name="zat_qty" attrs="{'invisible':[('is_alt_uom','=',False)],'readonly':[('is_alt_uom','=',False)], 'required': [('is_alt_uom','=',True)]}"/>
                                                         <field name="zat_uom" readonly="1"/>
                                                         <field name="total"/>
                                                         <!-- <field name="depot_id"/> -->
@@ -263,11 +274,28 @@
         </field>
     </record>
 
+    <record id="view_medical_healthcenters_pharmacy_line_filter" model="ir.ui.view">
+        <field name="name">Pharmacies Order Search</field>
+        <field name="model">oeh.medical.health.center.pharmacy.line</field>
+        <field name="priority" eval="8" />
+        <field name="arch" type="xml">
+            <search string="Pharmacies Order">
+                <field name="name" />
+                <field name="doctor" />
+                <field name="pharmacist"/>
+                <field name="state"/>
+                <separator/>
+                <filter string="Draft" name="draft" domain="[('state','=','Draft')]"/>
+
+            </search>
+        </field>
+    </record>
+
     <record id="action_pharmacy_line" model="ir.actions.act_window">
         <field name="name">Pharmacy Order</field>
         <field name="res_model">oeh.medical.health.center.pharmacy.line</field>
         <field name="domain">[]</field>
-        <field name="context">{'default_is_public': True}</field>
+        <field name="context">{'default_is_public': True, 'search_default_draft': 1}</field>
         <field name="view_type">form</field>
         <field name="view_mode">tree,form</field>
     </record>
