--- a/oehealth_idn/views/registration_view.xml
+++ b/oehealth_idn/views/registration_view.xml
@@ -59,7 +59,7 @@
                                 <span style="margin-right:10px"/>
                                 <field name="company" placeholder="Company" domain="[('is_company','=',True), ('customer','=',True)]" attrs="{'invisible': [('payment','!=','Corporate')], 'required': [('payment','=','Corporate')], 'readonly': [('state','not in',('Draft'))]}" class="oe_inline" nolabel="1"/>
                                 <field name="insurance" placeholder="Insurance" domain="[('patient','=', patient)]" attrs="{'invisible': [('payment','!=','Insurance')], 'required': [('payment','=','Insurance')], 'readonly': [('state','not in',('Draft'))]}" class="oe_inline" nolabel="1"/>
-                                <field name="employee_id" placeholder="Employee" domain="[('state','=','Active')]" attrs="{'invisible': [('payment','!=','Employee')], 'required': [('payment','=','Employee')], 'readonly': [('state','not in',('Draft'))]}" class="oe_inline" nolabel="1"/>
+                                <field name="employee_id" placeholder="Employee"  attrs="{'invisible': [('payment','!=','Employee')], 'required': [('payment','=','Employee')], 'readonly': [('state','not in',('Draft'))]}" class="oe_inline" nolabel="1"/>
                             </div>
                             <field name="payment_guarantor_discount_id" force_save="1"/>
                         </group>
@@ -107,6 +107,7 @@
                 <attribute name="colors">red:is_blacklist;grey:state=='Invoiced';blue:state=='Scheduled';green:state=='Completed';</attribute>
             </xpath>
             <field name="doctor" position="replace">
+                <field name="operating_unit_id"/>
                 <field name="payment"/>
                 <field name="company"/>
                 <field name="insurance"/>
