--- a/oehealth_idn/report/cppt_report.xml
+++ b/oehealth_idn/report/cppt_report.xml
@@ -17,12 +17,12 @@ th, td {
                                     <td>
                                         <table style="width:100%">
                                             <tr>
-                                                <td>No.RM : <p t-field="o.name" /></td>
+                                                <td>No.RM : <span t-field="o.patient.medical_record" /></td>
                                                 <td>Ruang Perawat : II/I/VIV Kamar : ____________</td>
                                             </tr>
                                             <tr>
-                                                <td>Nama Pasien : <p t-field="o.patient.name" /></td>
-                                                <td>Jenis Kelamin : <p t-field="o.patient.sex" /></td>
+                                                <td>Nama Pasien : <span t-field="o.patient.name" /></td>
+                                                <td>Jenis Kelamin : <span t-field="o.patient.sex" /></td>
                                             </tr>
                                         </table>
                                     </td>
