--- a/oehealth_idn/report/catatan_asuhan_gizi_report.xml
+++ b/oehealth_idn/report/catatan_asuhan_gizi_report.xml
@@ -19,7 +19,7 @@ th, td {
                                             <tr>
                                                 <td>No.Rekam Medis</td>
                                                 <td> : </td>
-                                                <td><p t-field="o.name" /></td>
+                                                <td><span t-field="o.patient.medical_record" /></td>
                                                 <td>Ruang</td>
                                                 <td> : </td>
                                                 <td>__________________________________</td>
@@ -27,10 +27,10 @@ th, td {
                                             <tr>
                                                 <td>Nama</td>
                                                 <td> : </td>
-                                                <td><p t-field="o.patient.name" /> - <p t-field="o.patient.sex" /></td>
+                                                <td><span t-field="o.patient.name" /> - <span t-field="o.patient.sex" /></td>
                                                 <td>Tanggal Lahir</td>
                                                 <td> : </td>
-                                                <td><p t-field="o.patient.dob" t-field-options='{"format": "d MMMM y"}' /></td>
+                                                <td><span t-field="o.patient.dob" t-field-options='{"format": "d MMMM y"}' /></td>
                                             </tr>
                                         </table>
                                     </td>
@@ -45,9 +45,9 @@ th, td {
                                     <td style="border:1px solid black;">
                                         <table style="width:100%">
                                             <tr>
-                                                <td>Umur : <p t-field="o.patient.age" /></td>
-                                                <td>Jenis Kelamin :<p t-field="o.patient.sex" /></td>
-                                                <td>Agama : <p t-field="o.patient.religion" /></td>
+                                                <td>Umur : <span t-field="o.patient.age" /></td>
+                                                <td>Jenis Kelamin :<span t-field="o.patient.sex" /></td>
+                                                <td>Agama : <span t-field="o.patient.religion" /></td>
                                                 <td>Kemampuan Baca : Bisa/Tidak</td>
                                             </tr>
                                         </table>
@@ -127,7 +127,7 @@ th, td {
                                         <table style="width:100%">
                                             <tr>
                                                 <th>ANTROPOMETRI</th>
-                                                <td>BB saat ini: ______________ </td>
+                                                <td>BB saat ini: <span t-field="o.weight" /> </td>
                                                 <td>PB/TB : ____________cm</td>
                                                 <td>IMT : </td>
                                                 <td>Status Gizi : </td>
