--- a/oehealth_idn/report/nota_resep_report.xml
+++ b/oehealth_idn/report/nota_resep_report.xml
@@ -17,15 +17,15 @@
                                     </div>
                                     <div>
                                         <strong>No. Registrasi:</strong>
-                                        <p t-field="o.reg_id.name"/>
+                                        <span t-field="o.reg_id.name"/>
                                     </div>
                                     <div>
                                         <strong>Nama Pasien:</strong>
-                                        <p t-field="o.arrival_id.patient.name"/>
+                                        <span t-field="o.arrival_id.patient.name"/>
                                     </div>
                                     <div>
                                         <strong>Tanggal Lahir:</strong>
-                                        <p t-field="o.arrival_id.patient.dob" t-field-options='{"format": "d MMMM y"}'/>
+                                        <span t-field="o.arrival_id.patient.dob" t-field-options='{"format": "d MMMM y"}'/>
                                     </div>
                                     <div>
                                         <strong>Jenis Kelamin / Umur:</strong>
@@ -39,15 +39,15 @@
                                     </div>
                                     <div>
                                         <strong>Dokter: </strong>
-                                        <p t-field="o.doctor_id"/>
+                                        <span t-field="o.doctor_id"/>
                                     </div>
                                     <div>
                                         <strong>Tanggal Masuk: </strong>
-                                        <p t-field="o.arrival_id.date"/>
+                                        <span t-field="o.arrival_id.date"/>
                                     </div>
                                     <div>
                                         <strong>Unit: </strong>
-                                        <p t-field="o.reg_id.unit"/>
+                                        <span t-field="o.reg_id.unit"/>
                                     </div>
                                     <div>
                                         <strong>No. Resep: </strong>
