--- a/oehealth_idn/report/observasi_terapi_pasien_report.xml
+++ b/oehealth_idn/report/observasi_terapi_pasien_report.xml
@@ -18,7 +18,7 @@ th, td {
               <table style="width:100%">
                 <tr>
                   <td rowspan="2">NO.RM</td>
-                  <td rowspan="2"><p t-field="o.name" /></td>
+                  <td rowspan="2"><span t-field="o.patient.medical_record"/></td>
                   <td rowspan="2">Nafas</td>
                   <td rowspan="2">Nadi </td>
                   <td rowspan="2">Suhu</td>
@@ -41,7 +41,7 @@ th, td {
                 </tr>
                 <tr>
                   <td>Nama Pasien</td>
-                  <td><p t-field="o.patient.name" /></td>
+                  <td><span t-field="o.patient.name" /></td>
                   <td>70</td>
                   <td>160</td>
                   <td>41</td>
@@ -77,7 +77,7 @@ th, td {
                 </tr>
                 <tr>
                   <td>Tanggal Lahir</td>
-                  <td><p t-field="o.patient.dob" t-field-options='{"format": "d MMMM y"}' /></td>
+                  <td><span t-field="o.patient.dob" t-field-options='{"format": "d MMMM y"}' /></td>
                   <td>50</td>
                   <td>120</td>
                   <td>39</td>
