--- a/oehealth_idn/report/perintah_rawat_inap_report.xml
+++ b/oehealth_idn/report/perintah_rawat_inap_report.xml
@@ -62,7 +62,7 @@ th, td {
 
                           <td>:</td>
 
-                          <td><p t-field="o.patient.name" /></td>
+                          <td><span t-field="o.patient.name" /></td>
 
                         </tr>
 
@@ -72,7 +72,7 @@ th, td {
 
                           <td>:</td>
 
-                          <td><p t-field="o.patient.dob" t-field-options='{"format": "d MMMM y"}' /></td>
+                          <td><span t-field="o.patient.dob" t-field-options='{"format": "d MMMM y"}' /></td>
 
                         </tr>
 
@@ -82,7 +82,7 @@ th, td {
 
                           <td>:</td>
 
-                          <td><p t-field="o.patient.age" /></td>
+                          <td><span t-field="o.patient.age" /></td>
 
                         </tr>
 
