--- a/oehealth_idn/report/rujukan_internal_report.xml
+++ b/oehealth_idn/report/rujukan_internal_report.xml
@@ -20,14 +20,14 @@ table, th, td {
                                                 <td>CM/Medical Record</td>
                                                 <td> : </td>
                                                 <td>
-                                                    <p t-field="o.name" />
+                                                    <span t-field="o.patient.medical_record" />
                                                 </td>
                                             </tr>
                                             <tr>
                                                 <td>Nama</td>
                                                 <td> : </td>
                                                 <td>
-                                                    <p t-field="o.patient.name" />
+                                                    <span t-field="o.patient.name" />
                                                 </td>
                                             </tr>
                                             <tr>
@@ -50,7 +50,7 @@ table, th, td {
                                             <tr>
                                                 <td>
                                                     Kepada TS : dr.
-                                                    <p t-field="o.doctor" />
+                                                    <span t-field="o.doctor" />
                                                 </td>
                                             </tr>
                                             <tr>
@@ -110,7 +110,7 @@ table, th, td {
                                                 <td style="text-align:center;"> Tanda tangan dan nama lengkap</td>
                                             </tr>
                                             <tr>
-                                                <td style="text-align:center;"> Tanggal : ____________ Jam : ___________</td>
+                                                <td style="text-align:center;"> <span t-esc="context_timestamp(datetime.datetime.now()).strftime('%Y-%m-%d %H:%M')"/></td>
                                             </tr>
                                         </table>
                                     </td>
@@ -127,14 +127,14 @@ table, th, td {
                                                 <td>CM/</td>
                                                 <td> : </td>
                                                 <td>
-                                                    <p t-field="o.name" />
+                                                    <p t-field="o.patient.medical_record" />
                                                 </td>
                                             </tr>
                                             <tr>
                                                 <td>Nama</td>
                                                 <td> : </td>
                                                 <td>
-                                                    <p t-field="o.patient" />
+                                                    <span t-field="o.patient.name" />
                                                 </td>
                                             </tr>
                                             <tr>
@@ -209,7 +209,7 @@ table, th, td {
                                                 <td style="text-align:center;"> Tanda tangan dan nama lengkap</td>
                                             </tr>
                                             <tr>
-                                                <td style="text-align:center;"> Tanggal : ____________ Jam : ___________</td>
+                                                <td style="text-align:center;"> <span t-esc="context_timestamp(datetime.datetime.now()).strftime('%Y-%m-%d %H:%M')"/></td>
                                             </tr>
                                         </table>
                                     </td>
