--- a/oehealth_idn/report/surat_keterangan_report.xml
+++ b/oehealth_idn/report/surat_keterangan_report.xml
@@ -72,7 +72,7 @@ table, th, td {
                                 </tr>
                                 <tr>
                                     <td colspan="3">
-    dr._________
+    dr.<span t-field="o.doctor" />
   
                                 
                                 </td>
